# ES-Endpoint-Factory

./: .gitignore  README.md  config.py  es_endpoint.py  es_endpoints_factory.py  pyproject.toml  requirements.txt
.devconrainer/: devcontainer.json
.devcontainer/: devcontainer.json  postCreateCommand.sh
elastic_configs/: docker-compose.yml
es_endpoints_factory/: config.py  es_endpoint.py  es_endpoints_factory.py
tests/: test_es_endpoints_factory.py
