[tool.poetry]
name = "ES-Endpoints-Factory"
version = "0.1.0"
description = ""
authors = ["John Doe <NotJonaAtAll@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
certifi = "2021.10.8"
elasticsearch = "7.16.2"
urllib3 = "1.26.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.931"
typing = "3.7.4.3"
typing-extensions = "4.0.1"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.1.12"]
build-backend = "poetry.core.masonry.api"
